# icd10cm

./: .gitignore  Makefile  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
config/: remove_properties.txt
docs/: get_latest_version.md  pipeline_incidents.md  plan.md  processing_details.md  release_notes.md  report.md
env/: .env.example
linkml/: mondo_source_schema.yaml
scripts/: acquire.py  get_latest_bioportal.py  resolve_version.py  transform.py  verify.py
sparql/: exact_syn_from_label.ru  fix_xref_prefixes.ru
src/icd10cm/: __init__.py  datamodel.py
tests/: test_pipeline_integrity.py  test_sparql_updates.py  test_transform.py
tests/input/: icd10cm_component_mini.owl  icd10cm_mini.owl  icd10cm_sparql_test.owl
